2012-03-21  Per Bothner  <per@bothner.com>

	* Shell.java (runFile): Pass error port to run iflineByLine.
	This causes warnings and errors to be printed out.

2012-03-15  Per Bothner  <per@bothner.com>

	* standard/SchemeCompilation.java (isSimpleApplyFunction): New method.

2012-02-13  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme): Define syntax->datum and
	datum->syntax.

2012-02-05  Per Bothner  <per@bothner.com>

	* lang/Quote.java (matchesUnquote, matchesUnquoteSplicing,
	matchesQuasiQuote): New protected methods for match unquote etc.
	* standard/syntax.java (matchesUnquote, matchesUnquoteSplicing,
	matchesQuasiQuote): Override for quasisyntax.
	* standard/Scheme.java (createReadTable): Update.

	* lang/TemplateScope.java (make): Make more robust in case
	syntax/quasisyntax is used in an non-macro context.

2012-02-04  Helmut Eller <eller.helmut@gmail.com>

	* TelnetRepl.java (serve): Return a vanilla Thread, rather than a
	Future.  This avoids a force if displaying, and seems more appropriate.

2012-01-31  Per Bothner  <per@bothner.com>

	* standard/require.java (importDefinitions): Add a null check.

	* standard/Scheme.java (initScheme): New functions 'force*'.

	* standard/object.java (scanClassDef): Set IS_ABSTRACT if interface
	specified explicitly.

2012-01-29  Per Bothner  <per@bothner.com>

	* lang/Translator.java (exp2Type): Take extra syntax parmeter 
	so we can pass it to rewrite.
	* standard/let.java (rewrite): Pass syntax to exp2Type.
	* lang/Lambda.java: Update exp2Type call..
	* standard/object.java: Likewise.

2012-01-27  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme): Fix binding for "call/cc".

	* standard/Scheme.java (initScheme): Declare promise-set-value!,
	promise-set-alias!, promise-set-exception!, and promise-set-thunk!.
	(getTypeName): Change binding for "promise".

2012-01-24  Per Bothner  <per@bothner.com>

	* lang/SyntaxPattern.java (allocVars):  Don't copy more from