@@ -1,3 +1,7 @@
+2012-03-25  Per Bothner  <per@bothner.com>
+
+	* mac-test.scm: 5 more tests.
+
 2012-03-21  Per Bothner  <per@bothner.com>
 
 	* Makefile.am: Pass --no-warn-xxx flags various places.  These are
